--- a/main.ipynb
+++ b/main.ipynb
@@ -1059,43 +1059,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Errore di Previsione negli RNN:\n",
+      "RNN prediction errors:\n",
       "1006.9983675789077\n",
       "443.4329273001823\n",
       "440.5308598972724\n",
       "12.177561392560309\n",
-      "Errore di Previsione negli ARIMA:\n",
+      "ARIMA prediction errors:\n",
       "578.2800719672448\n",
       "309.90237369265657\n"
      ]
     }
    ],
    "source": [
-    "print('Errore di Previsione negli RNN:')\n",
+    "print('RNN prediction errors:')\n",
     "print(mae_rnn1)\n",
     "print(mae_rnn2)\n",
     "print(mae_rnn3)\n",
     "print(mae_rnn4)\n",
     "\n",
-    "print('Errore di Previsione negli ARIMA:')\n",
+    "print('ARIMA prediction errors:')\n",
     "print(mae_arima1)\n",
     "print(mae_arima2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
