--- a/main.ipynb
+++ b/main.ipynb
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1075,26 +1075,27 @@
      "output_type": "stream",
      "text": [
       "RNN prediction errors:\n",
-      "1006.9983675789077\n",
-      "443.4329273001823\n",
-      "440.5308598972724\n",
-      "12.177561392560309\n",
+      "Not diff and not ext data: 1006.9983675789077\n",
+      "Diff and not ext data: 443.4329273001823\n",
+      "Diff and ext data: 440.5308598972724\n",
+      "Diff and ext data horizon 1: 12.177561392560309\n",
+      "\n",
       "ARIMA prediction errors:\n",
-      "578.2800719672448\n",
-      "309.90237369265657\n"
+      "Horizon 10: 578.2800719672448\n",
+      "Horizon 1: 309.90237369265657\n"
      ]
     }
    ],
    "source": [
     "print('RNN prediction errors:')\n",
-    "print(mae_rnn1)\n",
-    "print(mae_rnn2)\n",
-    "print(mae_rnn3)\n",
-    "print(mae_rnn4)\n",
+    "print('Not diff and not ext data: {}'.format(mae_rnn1))\n",
+    "print('Diff and not ext data: {}'.format(mae_rnn2))\n",
+    "print('Diff and ext data: {}'.format(mae_rnn3))\n",
+    "print('Diff and ext data horizon 1: {}'.format(mae_rnn4))\n",
     "\n",
-    "print('ARIMA prediction errors:')\n",
-    "print(mae_arima1)\n",
-    "print(mae_arima2)"
+    "print('\\nARIMA prediction errors:')\n",
+    "print('Horizon 10: {}'.format(mae_arima1))\n",
+    "print('Horizon 1: {}'.format(mae_arima2))"
    ]
   }
  ],
